# cmake_tutorial

./: CMakeLists.txt
cmake/: add_catch_test.cmake  add_custom_test.cmake  add_google_test.cmake  catch.cmake  catch_test.cmake  configure_testing.cmake  testing.cmake
include/cmake_tutorial/: cmake_tutorial.hpp  cmake_tutorial.ipp  cmake_tutorial_base.hpp  cmake_tutorial_config.hpp  ct_helper.hpp  ct_helper.ipp
lib/: libct_shared.dylib
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cmake_tutorial_demo.cpp
src/cmake_tutorial/: CMakeLists.txt  cmake_tutorial.cpp  cmake_tutorial_base.cpp
src/cmake_tutorial/test/: CMakeLists.txt  sample1.h  test_cmake_tutorial.cpp  test_cmake_tutorial_catch.cpp
test/: CMakeLists.txt
